--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,10 @@
       <artifactId>hibernate-core</artifactId>
       <version>6.5.1.Final</version>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-context</artifactId>
+      <version>6.5.1.Final</version>
+    </dependency>
   </dependencies>
 </project>
